<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="de.ka.jamit.tcalc.ui.home.addedit.HomeAddEditDialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:theme="@style/AppTheme"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/textDefault.title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_20"
                        android:gravity="center"
                        android:text="@{viewModel.editOrNewText}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Edit or New" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/closeButton"
                        style="@style/ButtonStyle.Transculent"
                        android:layout_width="@dimen/default_48"
                        android:layout_height="@dimen/default_58"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/default_4"
                        android:layout_marginEnd="@dimen/default_8"
                        android:onClick="@{()->viewModel.onClose()}"
                        android:tint="@color/fontDefault"
                        app:icon="@drawable/ic_close"
                        app:iconSize="@dimen/default_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_16"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textDefault.bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_8"
                        android:text="@string/home_addedit_referring" />

                    <EditText
                        android:id="@+id/editText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/default_54"
                        android:layout_marginStart="@dimen/default_8"
                        android:layout_marginEnd="@dimen/default_8"
                        android:hint="@string/record_key_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={viewModel.keyText}"
                        app:setError="@{viewModel.keyError}"
                        app:setSelection="@{viewModel.keySelection}" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="@dimen/default_54"
                        android:layout_height="@dimen/default_54"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/default_16"
                        android:background="@drawable/bg_bordered_cornered"
                        android:onClick="@{()->viewModel.onCategory()}"
                        android:foreground="@drawable/rounded_button_transculent_selector"
                        android:padding="@dimen/default_4"
                        android:tint="@{viewModel.categoryShade}"
                        app:setImageResource="@{viewModel.categoryImage}"
                        tools:srcCompat="@tools:sample/avatars" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/imageView"
                        android:layout_alignTop="@+id/imageView"
                        android:layout_alignEnd="@+id/imageView"
                        android:layout_alignBottom="@+id/imageView" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_16"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textDefault.bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_8"
                        android:text="@string/home_addedit_amount" />

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/default_54"
                        android:layout_marginStart="@dimen/default_8"
                        android:layout_marginEnd="@dimen/default_8"
                        android:hint="@string/record_value_hint"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={viewModel.valueText}"
                        app:setError="@{viewModel.valueError}"
                        app:setSelection="@{viewModel.valueSelection}" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_16"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textDefault.bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_8"
                        android:text="@string/home_addedit_timespan" />

                    <Spinner
                        android:layout_marginStart="@dimen/default_8"
                        style="@style/textDefault.bold"
                        android:foreground="@drawable/rounded_button_transculent_selector"
                        android:id="@+id/timespanSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/default_54"
                        android:selectedItemPosition="@={viewModel.timeSpanPosition}"
                        app:setAdapter="@{viewModel.timeSpanAdapter}" />

                </LinearLayout>

                <Switch
                    style="@style/textDefault.bold"
                    android:foreground="@drawable/rounded_button_transculent_selector"
                    android:id="@+id/incomeSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_54"
                    android:layout_margin="@dimen/default_16"
                    android:checked="@={viewModel.incomeCheck}"
                    android:padding="@dimen/default_8"
                    android:text="@string/home_addedit_income" />

                <Switch
                    style="@style/textDefault.bold"
                    android:foreground="@drawable/rounded_button_transculent_selector"
                    android:id="@+id/consideredSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_54"
                    android:layout_margin="@dimen/default_16"
                    android:checked="@={viewModel.consideredCheck}"
                    android:padding="@dimen/default_8"
                    android:text="@string/home_addedit_considered" />

                <com.google.android.material.button.MaterialButton
                    style="@style/ButtonStyle.Bordered"
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/default_8"
                    android:onClick="@{()->viewModel.choose()}"
                    android:text="@string/home_addedit_submit" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>